2011-10-11  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Remove all references to QTDIR_build and standalone_package

        Qt is now modularized, which means we no longer import WebKit into
        the Qt source tree. Instead we use git submodules, and building
        QtWebKit as "part of Qt" is really building QtWebKit as from trunk.

        To decrease the number of buildsystem configurations we also remove
        the standalone_package code-path used when we were providing tarballs
        with the derived sources pre-generated.

        Reviewed by Simon Hausmann.

        * MiniBrowser/qt/MiniBrowser.pro:
        * QtTestBrowser/QtTestBrowser.pro:
        * WebKitTestRunner/InjectedBundle/qt/InjectedBundle.pro:

2011-10-11  Dominic Mazzoni  <dmazzoni@google.com>

        Update Chromium accessibility support in DRT.
        https://bugs.webkit.org/show_bug.cgi?id=69676

        Reviewed by Chris Fleizach.

        Adds several missing properties and methods to enable more
        tests to pass, and in particular adds support for notification
        callbacks.

        * DumpRenderTree/chromium/AccessibilityController.cpp:
        (AccessibilityController::AccessibilityController):
        (AccessibilityController::reset):
        (AccessibilityController::getFocusedElement):
        (AccessibilityController::shouldLogAccessibilityEvents):
        (AccessibilityController::notificationReceived):
        (AccessibilityController::logAccessibilityEventsCallback):
        * DumpRenderTree/chromium/AccessibilityController.h:
        * DumpRenderTree/chromium/AccessibilityUIElement.cpp:
        (getHelpText):
        (getStringValue):
        (getOrientation):
        (AccessibilityUIElement::AccessibilityUIElement):
        (AccessibilityUIElement::getChildAtIndex):
        (AccessibilityUIElement::isEqual):
        (AccessibilityUIElement::notificationReceived):
        (AccessibilityUIElement::roleGetterCallback):